Wed Jul 24 20:57:44 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_set_arguments): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

	* compile.c (iseq_set_exception_table): ditto.

Wed Jul 24 19:49:54 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (find_proxy): raise BadURIError if the URI is
	  a relative URI. [Bug #8645]

Wed Jul 24 18:56:06 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_expandarray): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

	* vm_insnhelper.c (vm_caller_setup_args): ditto.

	* vm_insnhelper.c (vm_yield_setup_block_args): ditto.

Wed Jul 24 18:40:11 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c, gc.c: move ary_unprotect_logging() into
	  rb_gc_unprotect_logging() which is general version

	* include/ruby/ruby.h: add USE_RGENGC_LOGGING_WB_UNPROTECT
	  to enable.

Wed Jul 24 17:37:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_expand_path_internal): preserve the file name
	  encoding in an exception message.

Wed Jul 24 08:04:49 2013  Koichi Sasada  <ko1@atdot.net>

	* test/-ext-/tracepoint/test_tracepoint.rb: add GC on/off to count
	  GC events strictly.

Tue Jul 23 23:19:24 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/extconf.rb (CRYPTO_THREADID): check exist or not.

	* ext/openssl/ossl.c (ossl_thread_id): use rb_nativethread_self()
	  implemented at r42137 to allow threads which doesn't associated with
	  Ruby thread to use openssl functions.

	* ext/openssl/ossl.c (Init_ossl_locks): If CRYPTO_THREADID is defined
	  (OpenSSL 1.0.0 or later has it) use CRYPTO_THREADID_set_callback()
	  instead of CRYPTO_set_id_callback() because its argument is
	  unsigned long; it may cause id collision on mswin64
	  whose sizeof(unsigned long) < sizeof(void*).
	  http://www.openssl.org/docs/crypto/threads.html

	* ext/openssl/ossl.c (ossl_threadid_func): defined for above.
